quitar funcionalidades, quitar bugs confuguracion cominucacion con binance